
2017-10-07  Ron Norman <rjn@inglenet.com>

	* codegen.c: correction for -fodoslide

2017-10-06  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, tree.c, tree.h: added RECORD DELIMITER syntax checks.
	* parser.y, cobc.h, reserved.c: added BINARY-SEQUENTIAL and
	  LINE-SEQUENTIAL phrases to RECORD DELIMITER.
	* config.def: added config options for RECORD DELIMITER clause.

2017-09-28  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (stop_statement): set context-sensitive flag (bug #433).

2017-09-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort_msg): output orig_program_id instead of C-converted
	* codegen.c (codegen): adjust current_program used for error messages
	  during code generation of nested programs
	* parser.y: fixed missing warning for pending CURRENCY SIGN other than '$'
	* cobc.c, tree.c, tree.h: fixed #435 - nested programs had no access to
	  identifiers in its parent's scope: added next_program_ordered to
	  struct cb_program set in (restore_program_list_order) and used for
	  checking nested lookups afterwards

2017-09-22  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_set_intr_when_compiled): #436 fixed timezone printf format
	* cobc.c (cobc_enum_explain): added missing tags

2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: ensure correct order of the programs during processing
	* codegen.c (output_param): added missing check after calling (cb_ref)
	  to prevent SIGSEGV, see Bug #435
	* typeck.c, tree.c: checked result of (cb_ref) where missing

2017-09-18  Ron Norman <rjn@inglenet.com>

	* codegen.c:
	  Emit Decimal Constants for all module types

2017-09-18  Ron Norman <rjn@inglenet.com>

	* config.def:
	  Added select-working: yes/no
	  SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
	* typeck.c:
	  Report 'declared outside WORKING-STORAGE' if 'select-working: yes'
	  and SELECT RELATIVE KEY or ASSIGN field is not in WORKING-STORAGE
	* codegen.c: